# NDK-Sandbox

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/et/ndk_sandbox/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/java/com/et/ndk_sandbox/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/et/ndk_sandbox/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
